Finsished market screen backend

--- a/app/src/main/res/layout/activity_market.xml
+++ b/app/src/main/res/layout/activity_market.xml
@@ -144,10 +144,10 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:background="#F44336"
+                            android:background="#4CAF50"
                             android:enabled="false"
                             android:text="Buy"
-                            android:textColor="#3C3939" />
+                            android:textColor="#000000" />
                     </LinearLayout>
 
                 </LinearLayout>
@@ -414,6 +414,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
+                            android:background="#4CAF50"
                             android:text="Buy" />
                     </LinearLayout>
 
@@ -480,6 +481,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
+                            android:background="#4CAF50"
                             android:text="Buy" />
                     </LinearLayout>
 
@@ -546,6 +548,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
+                            android:background="#4CAF50"
                             android:text="Buy" />
                     </LinearLayout>
 
