working on second screen back end

--- a/app/src/main/res/layout/activity_my_assets.xml
+++ b/app/src/main/res/layout/activity_my_assets.xml
@@ -50,14 +50,15 @@
                             android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:gravity="center_horizontal|center_vertical"
-                            android:text="S.C Internacional" />
+                            android:text="Liverpool"/>
 
                         <Button
-                            android:id="@+id/aa"
+                            android:id="@+id/sell_liverpoool"
                             android:layout_width="200dp"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
-                            android:text="jfek" />
+                            android:background="#888888"
+                            android:text="Sell" />
 
                     </LinearLayout>
 
@@ -72,11 +73,19 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
-                            android:gravity="center"
-                            android:text="Price: X" />
+                            android:gravity="center|right"
+                            android:text="Price: " />
 
                         <TextView
-                            android:id="@+id/textView3"
+                            android:id="@+id/txt_price_liverpool"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:gravity="center"
+                            android:text="100" />
+
+                        <TextView
+                            android:id="@+id/up_liverpool"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
@@ -124,13 +133,14 @@
                             android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:gravity="center_horizontal|center_vertical"
-                            android:text="S.C Internacional" />
+                            android:text="Manchester City" />
 
                         <Button
-                            android:id="@+id/but00"
+                            android:id="@+id/sell_manchesterCity"
                             android:layout_width="200dp"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
+                            android:background="#888888"
                             android:text="Sell" />
 
                     </LinearLayout>
@@ -146,11 +156,19 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
-                            android:gravity="center"
-                            android:text="Price: X" />
+                            android:gravity="center|right"
+                            android:text="Price: " />
 
                         <TextView
-                            android:id="@+id/textView3"
+                            android:id="@+id/txt_price_manchesterCity"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:gravity="center"
+                            android:text="100" />
+
+                        <TextView
+                            android:id="@+id/up_manchesterCity"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
@@ -198,13 +216,14 @@
                             android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:gravity="center_horizontal|center_vertical"
-                            android:text="S.C Internacional" />
+                            android:text="Leicester city" />
 
                         <Button
-                            android:id="@+id/but00"
+                            android:id="@+id/sell_LeicesterCity"
                             android:layout_width="200dp"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
+                            android:background="#888888"
                             android:text="Sell" />
 
                     </LinearLayout>
@@ -220,11 +239,19 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
-                            android:gravity="center"
-                            android:text="Price: X" />
+                            android:gravity="center|right"
+                            android:text="Price: " />
 
                         <TextView
-                            android:id="@+id/textView3"
+                            android:id="@+id/txt_price_leicesterCity"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:gravity="center"
+                            android:text="100" />
+
+                        <TextView
+                            android:id="@+id/up_leicesterCity"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
@@ -272,13 +299,14 @@
                             android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:gravity="center_horizontal|center_vertical"
-                            android:text="S.C Internacional" />
+                            android:text="Chelsea" />
 
                         <Button
-                            android:id="@+id/but00"
+                            android:id="@+id/sell_chelsea"
                             android:layout_width="200dp"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
+                            android:background="#888888"
                             android:text="Sell" />
 
                     </LinearLayout>
@@ -294,11 +322,19 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
-                            android:gravity="center"
-                            android:text="Price: X" />
+                            android:gravity="center|right"
+                            android:text="Price: " />
 
                         <TextView
-                            android:id="@+id/textView3"
+                            android:id="@+id/txt_price_chelsea"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:gravity="center"
+                            android:text="100" />
+
+                        <TextView
+                            android:id="@+id/up_chelsea"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
@@ -346,13 +382,14 @@
                             android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:gravity="center_horizontal|center_vertical"
-                            android:text="S.C Internacional" />
+                            android:text="Manchester United" />
 
                         <Button
-                            android:id="@+id/but00"
+                            android:id="@+id/sell_manchesterUnited"
                             android:layout_width="200dp"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
+                            android:background="#888888"
                             android:text="Sell" />
 
                     </LinearLayout>
@@ -368,11 +405,19 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
-                            android:gravity="center"
-                            android:text="Price: X" />
+                            android:gravity="center|right"
+                            android:text="Price: " />
 
                         <TextView
-                            android:id="@+id/textView3"
+                            android:id="@+id/txt_price_manchesterUnited"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:gravity="center"
+                            android:text="100" />
+
+                        <TextView
+                            android:id="@+id/up_manchesterUnited"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
@@ -420,13 +465,14 @@
                             android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:gravity="center_horizontal|center_vertical"
-                            android:text="S.C Internacional" />
+                            android:text="Tottenham Hotspur" />
 
                         <Button
-                            android:id="@+id/but00"
+                            android:id="@+id/sell_tottenhamHotspur"
                             android:layout_width="200dp"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
+                            android:background="#888888"
                             android:text="Sell" />
 
                     </LinearLayout>
@@ -436,17 +482,24 @@
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:orientation="horizontal">
-
                         <TextView
                             android:id="@+id/textView2"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
-                            android:gravity="center"
-                            android:text="Price: X" />
+                            android:gravity="center|right"
+                            android:text="Price: " />
 
                         <TextView
-                            android:id="@+id/textView3"
+                            android:id="@+id/txt_price_tottenhamHotspur"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:gravity="center"
+                            android:text="100" />
+
+                        <TextView
+                            android:id="@+id/up_tottenhamHotspur"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
@@ -494,13 +547,14 @@
                             android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:gravity="center_horizontal|center_vertical"
-                            android:text="S.C Internacional" />
+                            android:text="Arsenal" />
 
                         <Button
-                            android:id="@+id/but00"
+                            android:id="@+id/sell_arsenal"
                             android:layout_width="200dp"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
+                            android:background="#888888"
                             android:text="Sell" />
 
                     </LinearLayout>
@@ -516,11 +570,18 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
-                            android:gravity="center"
-                            android:text="Price: X" />
+                            android:gravity="center|right"
+                            android:text="Price: " />
 
                         <TextView
-                            android:id="@+id/textView3"
+                            android:id="@+id/txt_price_arsenal"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:gravity="center"
+                            android:text="100" />
+                        <TextView
+                            android:id="@+id/up_arsenal"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
@@ -568,13 +629,14 @@
                             android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:gravity="center_horizontal|center_vertical"
-                            android:text="S.C Internacional" />
+                            android:text="Newcastle United" />
 
                         <Button
-                            android:id="@+id/but00"
+                            android:id="@+id/sell_newcastleUnited"
                             android:layout_width="200dp"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
+                            android:background="#888888"
                             android:text="Sell" />
 
                     </LinearLayout>
@@ -590,11 +652,19 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
-                            android:gravity="center"
-                            android:text="Price: X" />
+                            android:gravity="center|right"
+                            android:text="Price: " />
 
                         <TextView
-                            android:id="@+id/textView3"
+                            android:id="@+id/txt_price_newcastleUnited"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:gravity="center"
+                            android:text="100" />
+
+                        <TextView
+                            android:id="@+id/up_newcastleUnited"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
