--- a/app/src/main/res/layout/activity_market.xml
+++ b/app/src/main/res/layout/activity_market.xml
@@ -146,6 +146,7 @@
                             android:layout_weight="1"
                             android:background="#4CAF50"
                             android:enabled="false"
+                            android:onClick="onClick"
                             android:text="Buy"
                             android:textColor="#000000" />
                     </LinearLayout>
@@ -215,6 +216,7 @@
                             android:layout_weight="1"
                             android:background="#4CAF50"
                             android:enabled="true"
+                            android:onClick="onClick"
                             android:text="Buy" />
                     </LinearLayout>
 
@@ -281,6 +283,7 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:background="#4CAF50"
+                            android:onClick="onClick"
                             android:text="Buy" />
                     </LinearLayout>
 
@@ -347,6 +350,7 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:background="#4CAF50"
+                            android:onClick="onClick"
                             android:text="Buy"
                             android:textColor="#000000" />
                     </LinearLayout>
@@ -415,6 +419,7 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:background="#4CAF50"
+                            android:onClick="onClick"
                             android:text="Buy" />
                     </LinearLayout>
 
@@ -482,6 +487,7 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:background="#4CAF50"
+                            android:onClick="onClick"
                             android:text="Buy" />
                     </LinearLayout>
 
@@ -549,6 +555,7 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:background="#4CAF50"
+                            android:onClick="onClick"
                             android:text="Buy" />
                     </LinearLayout>
 
