--- a/app/src/main/res/layout/activity_ryan.xml
+++ b/app/src/main/res/layout/activity_ryan.xml
@@ -608,7 +608,7 @@
             </LinearLayout>
 
             <View
-                android:id="@+id/view"
+                android:id="@+id/view_linhaCima"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:background="#000000" />
@@ -617,7 +617,7 @@
     </ScrollView>
 
     <View
-        android:id="@+id/view"
+        android:id="@+id/view_linhaCima"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="#000000"
