--- a/app/src/main/res/layout/activity_my_assets.xml
+++ b/app/src/main/res/layout/activity_my_assets.xml
@@ -27,7 +27,7 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/imageView5"
+                    android:id="@+id/img_Liverpool"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:background="#EC0000"
@@ -45,7 +45,7 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/textView"
+                            android:id="@+id/text_Liverpool"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
@@ -57,7 +57,8 @@
                             android:layout_width="200dp"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
-                            android:background="#888888"
+                            android:background="#FF0000"
+                            android:onClick="onClick"
                             android:text="Sell" />
 
                     </LinearLayout>
@@ -69,7 +70,7 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/textView2"
+                            android:id="@+id/txt_price1"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
@@ -110,7 +111,7 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/imageView5"
+                    android:id="@+id/img_manchesterCity"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:background="#EC0000"
@@ -128,7 +129,7 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/textView"
+                            android:id="@+id/text_ManchesterCity"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
@@ -140,7 +141,8 @@
                             android:layout_width="200dp"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
-                            android:background="#888888"
+                            android:background="#FF0000"
+                            android:onClick="onClick"
                             android:text="Sell" />
 
                     </LinearLayout>
@@ -152,7 +154,7 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/textView2"
+                            android:id="@+id/txt_price2"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
@@ -193,7 +195,7 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/imageView5"
+                    android:id="@+id/img_LeicesterCity"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:background="#EC0000"
@@ -211,7 +213,7 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/textView"
+                            android:id="@+id/text_Leicester"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
@@ -223,7 +225,8 @@
                             android:layout_width="200dp"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
-                            android:background="#888888"
+                            android:background="#FF0000"
+                            android:onClick="onClick"
                             android:text="Sell" />
 
                     </LinearLayout>
@@ -235,7 +238,7 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/textView2"
+                            android:id="@+id/txt_price3"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
@@ -276,7 +279,7 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/imageView5"
+                    android:id="@+id/img_Chelsea"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:background="#EC0000"
@@ -294,7 +297,7 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/textView"
+                            android:id="@+id/text_Chelsea"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
@@ -306,7 +309,8 @@
                             android:layout_width="200dp"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
-                            android:background="#888888"
+                            android:background="#FF0000"
+                            android:onClick="onClick"
                             android:text="Sell" />
 
                     </LinearLayout>
@@ -318,7 +322,7 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/textView2"
+                            android:id="@+id/txt_price4"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
@@ -359,7 +363,7 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/imageView5"
+                    android:id="@+id/img_ManchesterUnited"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:background="#EC0000"
@@ -377,7 +381,7 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/textView"
+                            android:id="@+id/text_ManchesterUnited"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
@@ -389,7 +393,8 @@
                             android:layout_width="200dp"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
-                            android:background="#888888"
+                            android:background="#FF0000"
+                            android:onClick="onClick"
                             android:text="Sell" />
 
                     </LinearLayout>
@@ -401,7 +406,7 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/textView2"
+                            android:id="@+id/txt_price5"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
@@ -442,7 +447,7 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/imageView5"
+                    android:id="@+id/img_Tottenham"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:background="#EC0000"
@@ -460,7 +465,7 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/textView"
+                            android:id="@+id/text_Tottenham"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
@@ -472,7 +477,8 @@
                             android:layout_width="200dp"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
-                            android:background="#888888"
+                            android:background="#FF0000"
+                            android:onClick="onClick"
                             android:text="Sell" />
 
                     </LinearLayout>
@@ -483,7 +489,7 @@
                         android:layout_weight="1"
                         android:orientation="horizontal">
                         <TextView
-                            android:id="@+id/textView2"
+                            android:id="@+id/txt_price6"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
@@ -524,7 +530,7 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/imageView5"
+                    android:id="@+id/img_Arsenal"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:background="#EC0000"
@@ -542,7 +548,7 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/textView"
+                            android:id="@+id/text_Arsenal"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
@@ -554,7 +560,8 @@
                             android:layout_width="200dp"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
-                            android:background="#888888"
+                            android:background="#FF0000"
+                            android:onClick="onClick"
                             android:text="Sell" />
 
                     </LinearLayout>
@@ -566,7 +573,7 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/textView2"
+                            android:id="@+id/txt_price7"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
@@ -606,7 +613,7 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/imageView5"
+                    android:id="@+id/img_NewcastleUnited"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:background="#EC0000"
@@ -624,7 +631,7 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/textView"
+                            android:id="@+id/text_Newcastle"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
@@ -636,7 +643,8 @@
                             android:layout_width="200dp"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
-                            android:background="#888888"
+                            android:background="#FF0000"
+                            android:onClick="onClick"
                             android:text="Sell" />
 
                     </LinearLayout>
@@ -648,7 +656,7 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/textView2"
+                            android:id="@+id/txt_price8"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
@@ -678,7 +686,7 @@
             </LinearLayout>
 
             <View
-                android:id="@+id/view"
+                android:id="@+id/view_linhaCima"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:background="#000000" />
@@ -687,7 +695,7 @@
     </ScrollView>
 
     <View
-        android:id="@+id/view"
+        android:id="@+id/view_linhaDeCima"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="#000000"
