--- a/app/src/main/res/layout/activity_my_assets.xml
+++ b/app/src/main/res/layout/activity_my_assets.xml
@@ -45,15 +45,15 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/text_Liverpool"
+                            android:id="@+id/my_txt_0"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:gravity="center_horizontal|center_vertical"
-                            android:text="Liverpool"/>
+                            android:text="txt0"/>
 
                         <Button
-                            android:id="@+id/sell_liverpoool"
+                            android:id="@+id/sell_0"
                             android:layout_width="200dp"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
@@ -78,7 +78,7 @@
                             android:text="Price: " />
 
                         <TextView
-                            android:id="@+id/txt_price_liverpool"
+                            android:id="@+id/my_txt_price_0"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
@@ -86,7 +86,7 @@
                             android:text="100" />
 
                         <TextView
-                            android:id="@+id/up_liverpool"
+                            android:id="@+id/up_0"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
@@ -129,15 +129,15 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/text_ManchesterCity"
+                            android:id="@+id/my_txt_1"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:gravity="center_horizontal|center_vertical"
-                            android:text="Manchester City" />
+                            android:text="txt1" />
 
                         <Button
-                            android:id="@+id/sell_manchesterCity"
+                            android:id="@+id/sell_1"
                             android:layout_width="200dp"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
@@ -162,15 +162,15 @@
                             android:text="Price: " />
 
                         <TextView
-                            android:id="@+id/txt_price_manchesterCity"
+                            android:id="@+id/my_txt_price_1"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:gravity="center"
-                            android:text="100" />
+                            android:text="" />
 
                         <TextView
-                            android:id="@+id/up_manchesterCity"
+                            android:id="@+id/up_1"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
@@ -213,15 +213,15 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/text_Leicester"
+                            android:id="@+id/my_txt_2"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:gravity="center_horizontal|center_vertical"
-                            android:text="Leicester city" />
+                            android:text="txt2" />
 
                         <Button
-                            android:id="@+id/sell_LeicesterCity"
+                            android:id="@+id/sell_2"
                             android:layout_width="200dp"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
@@ -246,15 +246,15 @@
                             android:text="Price: " />
 
                         <TextView
-                            android:id="@+id/txt_price_leicesterCity"
+                            android:id="@+id/my_txt_price_2"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:gravity="center"
-                            android:text="100" />
+                            android:text="" />
 
                         <TextView
-                            android:id="@+id/up_leicesterCity"
+                            android:id="@+id/up_2"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
@@ -297,15 +297,15 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/text_Chelsea"
+                            android:id="@+id/my_txt_3"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:gravity="center_horizontal|center_vertical"
-                            android:text="Chelsea" />
+                            android:text="txt3" />
 
                         <Button
-                            android:id="@+id/sell_chelsea"
+                            android:id="@+id/sell_3"
                             android:layout_width="200dp"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
@@ -330,15 +330,15 @@
                             android:text="Price: " />
 
                         <TextView
-                            android:id="@+id/txt_price_chelsea"
+                            android:id="@+id/my_txt_price_3"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:gravity="center"
-                            android:text="100" />
+                            android:text="" />
 
                         <TextView
-                            android:id="@+id/up_chelsea"
+                            android:id="@+id/up_3"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
@@ -381,15 +381,15 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/text_ManchesterUnited"
+                            android:id="@+id/my_txt_4"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:gravity="center_horizontal|center_vertical"
-                            android:text="Manchester United" />
+                            android:text="txt4" />
 
                         <Button
-                            android:id="@+id/sell_manchesterUnited"
+                            android:id="@+id/sell_4"
                             android:layout_width="200dp"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
@@ -414,15 +414,15 @@
                             android:text="Price: " />
 
                         <TextView
-                            android:id="@+id/txt_price_manchesterUnited"
+                            android:id="@+id/my_txt_price_4"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:gravity="center"
-                            android:text="100" />
+                            android:text="" />
 
                         <TextView
-                            android:id="@+id/up_manchesterUnited"
+                            android:id="@+id/up_4"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
@@ -465,15 +465,15 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/text_Tottenham"
+                            android:id="@+id/my_txt_5"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:gravity="center_horizontal|center_vertical"
-                            android:text="Tottenham Hotspur" />
+                            android:text="txt5" />
 
                         <Button
-                            android:id="@+id/sell_tottenhamHotspur"
+                            android:id="@+id/sell_5"
                             android:layout_width="200dp"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
@@ -497,15 +497,15 @@
                             android:text="Price: " />
 
                         <TextView
-                            android:id="@+id/txt_price_tottenhamHotspur"
+                            android:id="@+id/my_txt_price_5"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:gravity="center"
-                            android:text="100" />
+                            android:text="" />
 
                         <TextView
-                            android:id="@+id/up_tottenhamHotspur"
+                            android:id="@+id/up_5"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
@@ -548,15 +548,15 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/text_Arsenal"
+                            android:id="@+id/my_txt_6"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:gravity="center_horizontal|center_vertical"
-                            android:text="Arsenal" />
+                            android:text="txt6" />
 
                         <Button
-                            android:id="@+id/sell_arsenal"
+                            android:id="@+id/sell_6"
                             android:layout_width="200dp"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
@@ -581,14 +581,14 @@
                             android:text="Price: " />
 
                         <TextView
-                            android:id="@+id/txt_price_arsenal"
+                            android:id="@+id/my_txt_price_6"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:gravity="center"
-                            android:text="100" />
+                            android:text="" />
                         <TextView
-                            android:id="@+id/up_arsenal"
+                            android:id="@+id/up_6"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
@@ -631,15 +631,15 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/text_Newcastle"
+                            android:id="@+id/my_txt_7"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:gravity="center_horizontal|center_vertical"
-                            android:text="Newcastle United" />
+                            android:text="txt7" />
 
                         <Button
-                            android:id="@+id/sell_newcastleUnited"
+                            android:id="@+id/sell_7"
                             android:layout_width="200dp"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
@@ -664,15 +664,15 @@
                             android:text="Price: " />
 
                         <TextView
-                            android:id="@+id/txt_price_newcastleUnited"
+                            android:id="@+id/my_txt_price_7"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:gravity="center"
-                            android:text="100" />
+                            android:text="" />
 
                         <TextView
-                            android:id="@+id/up_newcastleUnited"
+                            android:id="@+id/up_7"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
