--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -32,18 +32,6 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
-        android:id="@+id/text_grafico"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Gráfico"
-        android:textSize="48sp"
-        app:layout_constraintBottom_toBottomOf="@+id/b_market"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.365" />
-
-    <TextView
         android:id="@+id/txt_Money"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -65,16 +53,30 @@
         app:layout_constraintStart_toEndOf="@+id/txt_Money"
         app:layout_constraintTop_toTopOf="parent" />
 
+
+    <com.github.mikephil.charting.charts.LineChart
+        android:id="@+id/linechartHome"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="32dp"
+        app:layout_constraintBottom_toTopOf="@+id/txt_Market_Closes"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/b_update" />
+
     <TextView
         android:id="@+id/txt_Market_Closes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="200dp"
+        android:layout_marginBottom="32dp"
         android:text="The market closes in: "
         android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/v_Line"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_grafico" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <View
         android:id="@+id/v_Line"
@@ -90,7 +92,7 @@
         android:id="@+id/b_update"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="132dp"
+        android:layout_marginTop="64dp"
         android:onClick="onClick"
         android:text="Update"
         app:layout_constraintEnd_toEndOf="parent"
